src/test/ui/unsized/return-unsized-from-trait-method.stderr
error[E0161]: cannot move a value of type [u8]: the size of [u8] cannot be statically determined
  --> $DIR/return-unsized-from-trait-method.rs:11:17
   |
LL |         let _ = f.foo();
   |                 ^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0161`.
